apps/staging/solr-mainsite/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: solr-mainsite-loadbalancer
  namespace: solr-mainsite
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: "/solr/admin/info/health"
spec:
  type: LoadBalancer
  loadBalancerIP: "52.179.186.63"
  selector:
    environment: staging
    solr-cloud: staging-solr-mainsite
    technology: solr-cloud
  ports:
    - name: solr-http
      port: 8983
      targetPort: 8983
      protocol: TCP
