apps/staging/solr-mainsite/custom-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solr-main-custom
  namespace: solr-mainsite
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: solr-main.libutk.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: staging-solr-mainsite-solrcloud-common
            port:
              number: 8983
